2005-04-08  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/Utils.py (probably_alive): fix some bugs and added checking of ancestors.
	
2005-04-07  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GenericFilter.py: Call prepare/reset for nested filters

2005-04-07  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/gramps_main.py: correct type signature for 'active-changed' signal.
	* src/GrampsDBCallback.py: improve the error reporting.
	
2005-04-06  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: keep track of local person during update, connect
	active-changed signal
	* src/PedView.py: update database pointer when database changed, update
	active person
	* src/gramps_main.py: keep track of active-changed, use local person

2005-04-06  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/gramps.glade: People View: Add label for filter text input field.
	* src/GenericFilter.py (ProbablyAlive): Add check for input parameter,
	(HasSourceOf): get handle only once, removed unused code.
	* src/gramps_main.py: Show label for filter input field.

	* src/Utils.py (probably_alive): Add some checks to make current year parameter work.

2005-04-06  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GenericFilter.py: added a current year parameter to probably alive rule.
	* src/Utils.py: added a current year parameter to probably alive function.

2005-04-06  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/FilterEditor.py: Added source IDs into the source combobox.

2005-04-06  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GenericFilter.py: Added HasSourceOf rule
	* src/plugins/FilterEditor.py: Added MySource combobox for selecting source IDs.

2005-04-06  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Truncate place names because they tend to be loooong.

2005-04-06  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/DdTargets.py: added PERSON_LINK_LIST target.